--- a/src/main/webapp/assets/css/style-quiz.css
+++ b/src/main/webapp/assets/css/style-quiz.css
@@ -1,8 +1,9 @@
 .quiz-container{
-	background-color: #fff;
+	background-image: url(../images/service-item-bg.jpg);
 	border-radius: 10px;
 	box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
 	overflow: hidden;
+	font-family: 'FontAwesome';
 }
 .quiz-header{
 	padding: 4rem;
@@ -19,18 +20,18 @@ ul li label{
 	cursor: pointer;
 }
 button{
-	background-color: #03cae4;
+	background-color: #2d3f91;
 	color: #fff;
 	border: none;
 	display: block;
 	width: 100%;
 	cursor: pointer;
 	font-size: 1.1rem;
-	font-family: inherit;
+	font-family: 'FontAwesome';
 	padding: 1.3rem;
 }
 button:hover{
-	background-color: #04adc4;
+	opacity: 0.9;
 }
 button:focus{
 	outline: none;
